fixes overlay-content overflows on mobile screens (#77)
* Fix #3: overlay-content overflows on mobile screens


* Add box-sizing border-box


---------

--- a/src/uielements/report-selector.css
+++ b/src/uielements/report-selector.css
@@ -98,3 +98,17 @@
     display: block;
 }
 
+@media (max-width: 600px) {
+    .overlay-content {
+        width: 98%;
+        min-width: unset;
+        margin: 0.5em auto;
+        border-radius: 0.5em;
+        padding: 0.5em;
+        box-sizing: border-box;
+    }
+
+    .reports {
+        overflow-x: auto;
+    }
+}
